@@ -37,16 +37,24 @@ function rv = gurobiver(varargin)
 %   under other licensing terms, the licensors of MIPS grant
 %   you additional permission to convey the resulting work.
 
-[x, f, e, o] = gurobi_mex(1, 1, [], [], [], 1, 1, 'C', ...
-	struct('Display', 0, 'DisplayInterval', Inf));
-if isfield(o, 'Versions')
-	vn = sprintf('%d.%d.%d/%.2f', o.Versions.LibMajor, ...
-		o.Versions.LibMinor, o.Versions.LibTechi, o.Versions.GurobiMex);
-elseif isfield(o, 'Lib.Ver.Major')
-	vn = sprintf('%d.%d.%d/%.2f', o.('Lib.Ver.Major'), ...
-		o.('Lib.Ver.Minor'), o.('Lib.Ver.Techi'), o.('GurobiMex.Ver'));
-else
-	vn = '<unknown>';
+try
+    model = struct( ...
+        'A', sparse(1), ...
+        'rhs', 1, ...
+        'sense', '=', ...
+        'vtype', 'C', ...
+        'obj', 1, ...
+        'modelsense', 'min' ...
+    );
+    params = struct( ...
+        'outputflag', 0 ...
+    );
+    result = gurobi(model, params);
+    vn = sprintf('%d.%d.%d', result.versioninfo.major, result.versioninfo.minor, result.versioninfo.technical);
+catch gurobiError
+    fprintf('Gurobi Error!\n');
+    disp(gurobiError);
+    vn = '<unknown>';
 end
 
 v = struct( 'Name',     'Gurobi', ... 
